style.css
/* ... */
  @media (max-width:998px){
    :root{
      font-size: 95%;
    }
    #profile-btn {
      position: relative;
      right: 2rem
    }

    
    .playArea{
      grid-template-rows: auto;
    }
  }
  @media (max-width:383px){
    h1{
      font-size: 1.3rem;
    }
    
    .playArea{
      grid-template-rows: auto;
    }
    
    
  }
  @media (max-width:335px){
    h1{
      font-size: 1rem;
    }
    #profile-btn {
      position: relative;
      right: 1rem
    }
    
    .playArea{
      grid-template-rows: auto;
    }

  }
  @media (max-width:296px){
    :root{
      font-size: 0.8rem;
    }
    
    .playArea{
      grid-template-rows: auto;
    }

  }

  .right-screen{
    display: flex;
    justify-content: center;
  }

  .mp-button-holder {
    display: flex;
  }

  .mp-button{
    display:flex;
    align-items: center;
    font-size: 1rem;
    cursor: pointer;
    background: #273155;
    border-color: #ffffff;
    border-style: solid;
    border-radius: 1.8rem;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
    transition: 400ms ease;
    color: #ffffff;
  }

